
[package]
name = "plugin"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.14.0" }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["sync"] }
