[package]
name = "aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-cloudwatchlogs = { version = "0.17.0", default-features = false, features = ["rustls"]}
chrono = "0.4.26"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-futures = { version = "0.2.5" }
tracing-subscriber = "0.3.17"
