
[package]
name = "mysql_protocol"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
byteorder = "1.4.3"
bytes = "1"
chrono = "0.4.26"
conn_pool = { path = "../../proxy/pool" }
futures = "0.3.28"
iota = "0.2"
lazy_static = "1.4.0"
num-derive = "0.3"
num-traits = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
pin-project = "1.1.2"
protocol_codegen = { path = "../codegen" }
rand = "0.8"
regex = "1"
rsa = "0.6.1"
rust-crypto = "0.2.36"
rustls-pemfile = "1.0.3"
sha1 = "0.10.5"
thiserror = "1.0"
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tokio-native-tls = "0.3.1"
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.8", features = ["full"] }
tracing = "0.1.37"
tracing-futures = { version = "0.2.5" }
tracing-subscriber = "0.3.17"
