[package]
name = "strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.72"
chrono = "0.4"
conn_pool = { path = "../../proxy/pool" }
crossbeam-channel = "0.3"
endpoint = { path = "../endpoint" }
futures = "0.3.28"
loadbalance = { path = "../loadbalance" }
mysql_protocol = { path = "../../protocol/mysql", package = "mysql_protocol" }
parking_lot = "0.12.1"
pisa_error = { path = "../../error", package = "error" }
regex = "1"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tokio-scoped = "0.2.0"
lazy_static = "1.4.0"
tracing = "0.1.37"
tracing-futures = { version = "0.2.5" }
tracing-subscriber = "0.3.17"
mysql_parser = { path = "../../parser/mysql" }
indexmap = "1.9.3"
aho-corasick = "0.7.20"
itertools = "0.10.5"
thiserror = "1.0"
crc32fast = "1.3.2"
paste = "1.0.14"
